Wolf added and enemies and deers wants to add

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -147,9 +147,10 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Sc
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 StaticMesh=StaticMesh.LOD0.StaticMeshSectionListNameLOD_0,
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading|WhiteBalance,PostProcessVolume.Lens.Lens|Depth of FieldAdvanced,PostProcessVolume.Color Grading.Color Grading|Global,PostProcessVolume.Lens.Lens|BloomAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Chromatic Aberration,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Camera,PostProcessVolume.Lens.Lens|Lens Flares,PostProcessVolume.Lens.Lens|Image Effects,PostProcessVolume.Lens.Lens|Depth of Field,PostProcessVolume.Lens.Lens|Bloom,
+StaticMeshActor=StaticMeshActor.Collision.Collision,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Geometry
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=False
@@ -178,7 +179,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/Level_Chapter01
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -365,8 +366,8 @@ StaticMesh.LODCustomMode=True
 StaticMesh.LOD0=True
 StaticMesh.LodSettings=False
 StaticMesh.StaticMesh=False
-StaticMesh.Collision=False
-StaticMesh.ImportSettings=False
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
 StaticMesh.EditableMesh=False
 StaticMesh.Navigation=False
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
@@ -493,26 +494,32 @@ SkeletalMeshActor.Replication=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
 SkeletalMeshActor.SkeletalMesh=True
+SkeletalMeshActor.Mobile=False
+SkeletalMeshActor.AssetUserData=False
+SkeletalMeshActor.HLOD=False
+StaticMesh.Thumbnail=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Geometry/Crate1.Crate1;
-RecentlyPlaced=/Game/Geometry/Water_Tower_Scanline.Water_Tower_Scanline;
-RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Meshes/SK_Pig_PhysicsAsset.SK_Pig_PhysicsAsset;
-RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Meshes/SK_Pig.SK_Pig;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Smoke.Blueprint_Effect_Smoke;
-RecentlyPlaced=/Game/StarterContent/Blueprints/Blueprint_Effect_Fire.Blueprint_Effect_Fire;
-RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
-RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Game/Geometry/Tree.Tree;
-RecentlyPlaced=/Game/Geometry/GrassClump.GrassClump;
-RecentlyPlaced=/Game/Geometry/Rock.Rock;
-RecentlyPlaced=/Game/Geometry/firelogs.firelogs;
-RecentlyPlaced=/Game/Geometry/Cabin.Cabin;
-RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_IdleBreathe.ANIM_Wolf_IdleBreathe;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_IdleAggressive.ANIM_Wolf_IdleAggressive;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Howl.ANIM_Wolf_Howl;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_GetHitFront.ANIM_Wolf_GetHitFront;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Bite.ANIM_Wolf_Bite;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Sleep.ANIM_Wolf_Sleep;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_RestToGoBackUp.ANIM_Wolf_RestToGoBackUp;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_JumpBite.ANIM_Wolf_JumpBite;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_GoToRest.ANIM_Wolf_GoToRest;
+RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Rest.ANIM_Wolf_Rest;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerStag_WalkTurnL_RM.ANIM_DeerStag_WalkTurnL_RM;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_SleepToGoBackUp.ANIM_DeerDoe_SleepToGoBackUp;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_IdleGraze.ANIM_DeerDoe_IdleGraze;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_IdleRest.ANIM_DeerDoe_IdleRest;
+RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_Walk.ANIM_DeerDoe_Walk;
+RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_SniffleforFood.ANIM_Pig_SniffleforFood;
+RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_Walk.ANIM_Pig_Walk;
+RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_GoToRest.ANIM_Pig_GoToRest;
+RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_RunTurnR.ANIM_Pig_RunTurnR;
+RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_Rest.ANIM_Pig_Rest;
 
 [RootWindow]
 ScreenPosition=X=102.400 Y=167.200
@@ -1185,26 +1192,26 @@ StaticMeshEditor.TimeStamp=2019.03.17-23.42.51
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Materials/M_Crate
-MRUItem1=/Game/StarterContent/Particles/P_Smoke
-MRUItem2=/Game/Materials/M_TreeFront
-MRUItem3=/Game/Materials/M_Branch
-MRUItem4=/Game/Materials/M_Bark
-MRUItem5=/Game/Geometry/Tree
-MRUItem6=/Game/Materials/M_Grass_Inst
-MRUItem7=/Game/Maps/Level_Chapter01
-MRUItem8=/Game/Materials/M_GrassMaster
-MRUItem9=/Game/Geometry/GrassClump
-MRUItem10=/Game/Materials/M_BurnedWood
-MRUItem11=/Game/Geometry/firelogs
-MRUItem12=/Game/Materials/M_Rock
-MRUItem13=/Game/Geometry/Rock
-MRUItem14=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem15=/Game/Materials/M_Window
-MRUItem16=/Game/Materials/M_Chimney
-MRUItem17=/Game/Materials/M_Door
-MRUItem18=/Game/Materials/M_Tiles
-MRUItem19=/Game/Materials/M_Beam
+MRUItem0=/Game/Geometry/Rock
+MRUItem1=/Game/Geometry/Water_Tower_Scanline
+MRUItem2=/Game/Materials/M_Crate
+MRUItem3=/Game/StarterContent/Particles/P_Smoke
+MRUItem4=/Game/Materials/M_TreeFront
+MRUItem5=/Game/Materials/M_Branch
+MRUItem6=/Game/Materials/M_Bark
+MRUItem7=/Game/Geometry/Tree
+MRUItem8=/Game/Materials/M_Grass_Inst
+MRUItem9=/Game/Maps/Level_Chapter01
+MRUItem10=/Game/Materials/M_GrassMaster
+MRUItem11=/Game/Geometry/GrassClump
+MRUItem12=/Game/Materials/M_BurnedWood
+MRUItem13=/Game/Geometry/firelogs
+MRUItem14=/Game/Materials/M_Rock
+MRUItem15=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem16=/Game/Materials/M_Window
+MRUItem17=/Game/Materials/M_Chimney
+MRUItem18=/Game/Materials/M_Door
+MRUItem19=/Game/Materials/M_Tiles
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1241,6 +1248,7 @@ bAlwaysRefreshAllPreviews=True
 /Game/Geometry/Tree.Tree=0
 /Game/StarterContent/Particles/P_Smoke.P_Smoke=0
 /Game/Materials/M_Crate.M_Crate=0
+/Game/Geometry/Water_Tower_Scanline.Water_Tower_Scanline=0
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1294,6 +1302,8 @@ Object=
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+SkeletalMeshActor="\"Object.SkeletalMeshActor.SkeletalMeshComponent.Object.AssetUserData.AssetUserData\" "
+StaticMeshActor=
 
 [/Script/UnrealEd.FbxImportUI]
 bImportMaterials=False
