Need to do animal animations

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -544,7 +544,7 @@ UNR=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/Maps
 BRUSH=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 FBX=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 FBXAnim=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
-GenericImport=../../../../../../Users/prasanth/Downloads/Cabin/firelogs.fbx
+GenericImport=../../../../../../Users/prasanth/Downloads/Compressed/Crate Fbx/WdCrt_c.jpg
 GenericExport=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 GenericOpen=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 GenericSave=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
@@ -1190,6 +1190,10 @@ PortalProxies.TimeStamp=2019.03.17-23.42.42
 PortalProxies.LastCompileMethod=Unknown
 StaticMeshEditor.TimeStamp=2019.03.17-23.42.51
 StaticMeshEditor.LastCompileMethod=Unknown
+Cascade.TimeStamp=2019.03.17-23.42.20
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2019.03.17-23.42.24
+DistCurveEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Geometry/Rock
