Gun boxes added

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Enemy_Soldiers/Animation
+ContentBrowserTab1.SelectedPaths=/Game/Geometry
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -203,7 +203,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/Level_Chapter01
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 BP_Sky_Sphere_C.TransformCommon=True
@@ -631,6 +631,9 @@ K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/KUTIJE_Mesh1.KUTIJE_Mesh1;
+RecentlyPlaced=/Game/Geometry/woodenbox.woodenbox;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/SMG11/SK_SMG11_Nostock_X.SK_SMG11_Nostock_X;
 RecentlyPlaced=/Game/Enemy_Soldiers/Animation/Looking_Around.Looking_Around;
 RecentlyPlaced=/Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset.Looking_Around_PhysicsAsset;
 RecentlyPlaced=/Game/Enemy_Soldiers/Looking_Around_PhysicsAsset.Looking_Around_PhysicsAsset;
@@ -648,9 +651,6 @@ RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerStag_W
 RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_SleepToGoBackUp.ANIM_DeerDoe_SleepToGoBackUp;
 RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_IdleGraze.ANIM_DeerDoe_IdleGraze;
 RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_IdleRest.ANIM_DeerDoe_IdleRest;
-RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_Walk.ANIM_DeerDoe_Walk;
-RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_SniffleforFood.ANIM_Pig_SniffleforFood;
-RecentlyPlaced=/Game/AnimalVarietyPack/Pig/Animations/ANIM_Pig_Walk.ANIM_Pig_Walk;
 
 [RootWindow]
 ScreenPosition=X=102.400 Y=167.200
@@ -675,7 +675,7 @@ UNR=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/Maps
 BRUSH=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 FBX=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 FBXAnim=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
-GenericImport=../../../../../../Users/prasanth/Downloads/Compressed/Crate Fbx/WdCrt_c.jpg
+GenericImport=../../../../../../Users/prasanth/Downloads/Compressed/Fbx/KUTIJE/M_5.jpg
 GenericExport=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 GenericOpen=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
 GenericSave=../../../../../../Users/prasanth/Desktop/UE4_Beginner/Content/
@@ -1341,26 +1341,26 @@ PhysicsAssetEditor.TimeStamp=2019.03.17-23.42.41
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy_Soldiers/Animation/Idle
-MRUItem1=/Game/Enemy_Soldiers/Animation/Looking_Around_Skeleton
-MRUItem2=/Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset
-MRUItem3=/Game/Enemy_Soldiers/Animation/Looking_Around
-MRUItem4=/Game/BlendSpace/Pig/B_Walk_Run
-MRUItem5=/Game/BlendSpace/Pig/Pig_AnimBlueprint
-MRUItem6=/Game/Maps/Level_Chapter01
-MRUItem7=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem8=/Game/Enemy_Soldiers/Material/M_Body
-MRUItem9=/Game/Enemy_Soldiers/Material/M_Head
-MRUItem10=/Game/Enemy_Soldiers/Dying_Skeleton
-MRUItem11=/Game/Enemy_Soldiers/Looking_Around_PhysicsAsset
-MRUItem12=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton
-MRUItem13=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Bear_Export_Skeleton
-MRUItem14=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Enemy_Bear
-MRUItem15=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Enemy_Bear_Animations/ExoGame_Bears_Walk
-MRUItem16=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Enemy_Bear_Animations/ExoGame_Bears_Attack_Melee_C
-MRUItem17=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Enemy_Bear_Animations/ExoGame_Bears_Attack_Death
-MRUItem18=/Game/Geometry/Rock
-MRUItem19=/Game/Geometry/Water_Tower_Scanline
+MRUItem0=/Game/Geometry/KUTIJE_Mesh1
+MRUItem1=/Game/Geometry/woodenbox
+MRUItem2=/Game/Materials/M_RightBox
+MRUItem3=/Game/Materials/M_LeftBox
+MRUItem4=/Game/Enemy_Soldiers/Animation/Idle
+MRUItem5=/Game/Enemy_Soldiers/Animation/Looking_Around_Skeleton
+MRUItem6=/Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset
+MRUItem7=/Game/Enemy_Soldiers/Animation/Looking_Around
+MRUItem8=/Game/BlendSpace/Pig/B_Walk_Run
+MRUItem9=/Game/BlendSpace/Pig/Pig_AnimBlueprint
+MRUItem10=/Game/Maps/Level_Chapter01
+MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem12=/Game/Enemy_Soldiers/Material/M_Body
+MRUItem13=/Game/Enemy_Soldiers/Material/M_Head
+MRUItem14=/Game/Enemy_Soldiers/Dying_Skeleton
+MRUItem15=/Game/Enemy_Soldiers/Looking_Around_PhysicsAsset
+MRUItem16=/Game/FirstPerson/Character/Mesh/SK_Mannequin_Arms_Skeleton
+MRUItem17=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Bear_Export_Skeleton
+MRUItem18=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Enemy_Bear
+MRUItem19=/Game/InfinityBladeAdversaries/Enemy/Enemy_Bear/Enemy_Bear_Animations/ExoGame_Bears_Walk
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -1416,6 +1416,10 @@ bAlwaysRefreshAllPreviews=True
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset.Looking_Around_PhysicsAsset=1
 /Game/Enemy_Soldiers/Animation/Idle.Idle=1
+/Game/Materials/M_LeftBox.M_LeftBox=0
+/Game/Materials/M_RightBox.M_RightBox=0
+/Game/Geometry/woodenbox.woodenbox=1
+/Game/Geometry/KUTIJE_Mesh1.KUTIJE_Mesh1=1
 
 [MaterialInstanceEditor]
 bShowGrid=False
@@ -1493,7 +1497,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=False
+bAutoGenerateCollision=True
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
