--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Geometry
+ContentBrowserTab1.SelectedPaths=/Game/FPS_Weapon_Bundle/Weapons/Meshes/G67_Grenade
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=True
@@ -629,8 +629,31 @@ K2Node_VariableSet.DefaultValueCategory=True
 Pig_AnimBlueprint_C.Default=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/G67_Grenade/SM_G67.SM_G67;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/AR4/SK_AR4_X_Physics.SK_AR4_X_Physics;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/AR4/SM_AR4_Mag.SM_AR4_Mag;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Ammunition/SM_Shell_9x18_Empty.SM_Shell_9x18_Empty;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Accessories/SM_T4_Sight.SM_T4_Sight;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Accessories/SM_Suppressor5.SM_Suppressor5;
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/Accessories/SM_Scope_25x56_X.SM_Scope_25x56_X;
+RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/AR4/SK_AR4_X.SK_AR4_X;
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
+RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/KA_Val/SK_KA_Val_X.SK_KA_Val_X;
 RecentlyPlaced=/Game/Geometry/KUTIJE_Mesh1.KUTIJE_Mesh1;
 RecentlyPlaced=/Game/Geometry/woodenbox.woodenbox;
 RecentlyPlaced=/Game/FPS_Weapon_Bundle/Weapons/Meshes/SMG11/SK_SMG11_Nostock_X.SK_SMG11_Nostock_X;
@@ -639,21 +662,9 @@ RecentlyPlaced=/Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset.Lookin
 RecentlyPlaced=/Game/Enemy_Soldiers/Looking_Around_PhysicsAsset.Looking_Around_PhysicsAsset;
 RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_IdleBreathe.ANIM_Wolf_IdleBreathe;
 RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_IdleAggressive.ANIM_Wolf_IdleAggressive;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Howl.ANIM_Wolf_Howl;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_GetHitFront.ANIM_Wolf_GetHitFront;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Bite.ANIM_Wolf_Bite;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Sleep.ANIM_Wolf_Sleep;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_RestToGoBackUp.ANIM_Wolf_RestToGoBackUp;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_JumpBite.ANIM_Wolf_JumpBite;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_GoToRest.ANIM_Wolf_GoToRest;
-RecentlyPlaced=/Game/AnimalVarietyPack/Wolf/Animations/ANIM_Wolf_Rest.ANIM_Wolf_Rest;
-RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerStag_WalkTurnL_RM.ANIM_DeerStag_WalkTurnL_RM;
-RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_SleepToGoBackUp.ANIM_DeerDoe_SleepToGoBackUp;
-RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_IdleGraze.ANIM_DeerDoe_IdleGraze;
-RecentlyPlaced=/Game/AnimalVarietyPack/DeerStagAndDoe/Animations/ANIM_DeerDoe_IdleRest.ANIM_DeerDoe_IdleRest;
 
 [RootWindow]
-ScreenPosition=X=102.400 Y=167.200
+ScreenPosition=X=40.000 Y=29.600
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1341,17 +1352,17 @@ PhysicsAssetEditor.TimeStamp=2019.03.17-23.42.41
 PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Geometry/KUTIJE_Mesh1
-MRUItem1=/Game/Geometry/woodenbox
-MRUItem2=/Game/Materials/M_RightBox
-MRUItem3=/Game/Materials/M_LeftBox
-MRUItem4=/Game/Enemy_Soldiers/Animation/Idle
-MRUItem5=/Game/Enemy_Soldiers/Animation/Looking_Around_Skeleton
-MRUItem6=/Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset
-MRUItem7=/Game/Enemy_Soldiers/Animation/Looking_Around
-MRUItem8=/Game/BlendSpace/Pig/B_Walk_Run
-MRUItem9=/Game/BlendSpace/Pig/Pig_AnimBlueprint
-MRUItem10=/Game/Maps/Level_Chapter01
+MRUItem0=/Game/Maps/Level_Chapter01
+MRUItem1=/Game/Geometry/KUTIJE_Mesh1
+MRUItem2=/Game/Geometry/woodenbox
+MRUItem3=/Game/Materials/M_RightBox
+MRUItem4=/Game/Materials/M_LeftBox
+MRUItem5=/Game/Enemy_Soldiers/Animation/Idle
+MRUItem6=/Game/Enemy_Soldiers/Animation/Looking_Around_Skeleton
+MRUItem7=/Game/Enemy_Soldiers/Animation/Looking_Around_PhysicsAsset
+MRUItem8=/Game/Enemy_Soldiers/Animation/Looking_Around
+MRUItem9=/Game/BlendSpace/Pig/B_Walk_Run
+MRUItem10=/Game/BlendSpace/Pig/Pig_AnimBlueprint
 MRUItem11=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
 MRUItem12=/Game/Enemy_Soldiers/Material/M_Body
 MRUItem13=/Game/Enemy_Soldiers/Material/M_Head
